WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300657
[css-anchor-position-1] Invalidate all remembered last successful position option when stylesheet content changes
https://bugs.webkit.org/show_bug.cgi?id=300657
Summary
[css-anchor-position-1] Invalidate all remembered last successful position op...
Kiet Ho
Reported
2025-10-13 14:59:20 PDT
[css-anchor-position-1] Invalidate all remembered last successful position option when stylesheet content changes
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-13 14:59:26 PDT
<
rdar://problem/162555785
>
Kiet Ho
Comment 2
2025-10-13 16:05:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52263
EWS
Comment 3
2025-10-16 00:53:35 PDT
Committed
301617@main
(095e0991651f): <
https://commits.webkit.org/301617@main
> Reviewed commits have been landed. Closing PR #52263 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug