[css-anchor-position-1] Invalidate all remembered last successful position option when @position-try mutates rdar://162555785 https://bugs.webkit.org/show_bug.cgi?id=300657

Reviewed by Antti Koivisto.

This patch invalidates all remembered last successful position option when a
property inside @position-try rule mutates, per spec. This is done by making
PropertySetCSSDescriptors::setPropertyInternal virtual, and providing an override
in CSSPositionTryDescriptors that invalidates the remembered position options.
This is the bare minimum needed to pass the test.

Test: LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/last-successful-change-try-rule.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/last-successful-change-try-rule-expected.txt:
* Source/WebCore/css/CSSPositionTryDescriptors.cpp:
(WebCore::CSSPositionTryDescriptors::setPropertyInternal):
* Source/WebCore/css/CSSPositionTryDescriptors.h:
* Source/WebCore/css/PropertySetCSSDescriptors.h:

Canonical link: https://commits.webkit.org/301617@main