Source/WebCore/css/CSSPositionTryDescriptors.h
@@ -124,6 +124,10 @@ public:
 private:
     CSSPositionTryDescriptors(MutableStyleProperties&, CSSPositionTryRule&);
 
+    // Override this to invalidate all remembered last-successful position options
+    // when property value changes.
+    ExceptionOr<void> setPropertyInternal(CSSPropertyID, const String& value, IsImportant) override;
+
     StyleRuleType ruleType() const final;
 };
 
